Use String values throughout for forwarding. Return type of all action methods changed to String from int + various other related changes.
Changed ShowCurrentTabAction to use parameters to list valif forwards and event search forwards. Made possible by the above. Required struts.xml changes.

Additionally, removed old search struts actions. Now we are using a single manage events tab specific search actions not needed. Fixed some redirects which were taking us to an invalid tab (searchList)

XSL: fixed the status buttons - param was wrong. Added some default home content. Added help page and display help and home in iframe.